Compiled plugins. Fails to link test projects.

--- a/plugins/E1.31/CMakeLists.txt
+++ b/plugins/E1.31/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../variables.cmake)
+
 add_library(e131)
 target_sources(e131 PRIVATE
     ../interfaces/qlcioplugin.cpp ../interfaces/qlcioplugin.h
