--- a/plugins/artnet/test/CMakeLists.txt
+++ b/plugins/artnet/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../../variables.cmake)
+
 add_executable(artnet_test WIN32 MACOSX_BUNDLE
     ../../interfaces/qlcioplugin.cpp ../../interfaces/qlcioplugin.h
     ../../interfaces/rdmprotocol.cpp ../../interfaces/rdmprotocol.h
