--- a/plugins/osc/CMakeLists.txt
+++ b/plugins/osc/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../variables.cmake)
+
 add_library(osc)
 target_sources(osc PRIVATE
     ../interfaces/qlcioplugin.cpp ../interfaces/qlcioplugin.h
