--- a/plugins/velleman/test/CMakeLists.txt
+++ b/plugins/velleman/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../../variables.cmake)
+
 add_executable(velleman_test WIN32 MACOSX_BUNDLE
     ../../interfaces/qlcioplugin.cpp ../../interfaces/qlcioplugin.h
     ../src/velleman_mock.cpp
