--- a/ui/test/efxpreviewarea/CMakeLists.txt
+++ b/ui/test/efxpreviewarea/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(efxpreviewarea_test WIN32 MACOSX_BUNDLE
     efxpreviewarea_test.cpp efxpreviewarea_test.h
+    ../../src/efxpreviewarea.h
 )
 target_include_directories(efxpreviewarea_test PRIVATE
     ../../../engine/src
