--- a/ui/test/functionselection/CMakeLists.txt
+++ b/ui/test/functionselection/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(functionselection_test WIN32 MACOSX_BUNDLE
     functionselection_test.cpp functionselection_test.h
+    ../../src/functionselection.h
 )
 target_include_directories(functionselection_test PRIVATE
     ../../../engine/src
