--- a/ui/test/monitorfixture/CMakeLists.txt
+++ b/ui/test/monitorfixture/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(monitorfixture_test WIN32 MACOSX_BUNDLE
     monitorfixture_test.cpp monitorfixture_test.h
+    ../../src/monitor/monitorfixture.h
 )
 target_include_directories(monitorfixture_test PRIVATE
     ../../../engine/src
