--- a/ui/test/vccuelist/CMakeLists.txt
+++ b/ui/test/vccuelist/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(vccuelist_test WIN32 MACOSX_BUNDLE
     vccuelist_test.cpp vccuelist_test.h
+    ../../src/virtualconsole/vccuelist.h
 )
 target_include_directories(vccuelist_test PRIVATE
     ../../../engine/src
