--- a/ui/test/vcwidget/CMakeLists.txt
+++ b/ui/test/vcwidget/CMakeLists.txt
@@ -3,6 +3,7 @@ include(../../../variables.cmake)
 add_executable(vcwidget_test WIN32 MACOSX_BUNDLE
     stubwidget.cpp stubwidget.h
     vcwidget_test.cpp vcwidget_test.h
+    ../../src/virtualconsole/vcwidget.h
 )
 target_include_directories(vcwidget_test PRIVATE
     ../../../engine/src
