--- a/ui/test/vcwidgetproperties/CMakeLists.txt
+++ b/ui/test/vcwidgetproperties/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
     vcwidgetproperties_test.cpp vcwidgetproperties_test.h
+    ../../src/virtualconsole/vcwidgetproperties.h
 )
 target_include_directories(vcwidgetproperties_test PRIVATE
     ../../../plugins/interfaces
