--- a/ui/test/vcxypadarea/CMakeLists.txt
+++ b/ui/test/vcxypadarea/CMakeLists.txt
@@ -2,6 +2,7 @@ include(../../../variables.cmake)
 
 add_executable(vcxypadarea_test WIN32 MACOSX_BUNDLE
     vcxypadarea_test.cpp vcxypadarea_test.h
+    ../../src/virtualconsole/vcxypadarea.h
 )
 target_include_directories(vcxypadarea_test PRIVATE
     ../../../engine/src
