--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 project(plugins VERSION 1.0 LANGUAGES C CXX)
+find_package(PkgConfig REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -25,7 +26,11 @@ if(NOT ANDROID AND NOT IOS)
     add_subdirectory(hid)
     add_subdirectory(os2l)
 endif()
-if((((NOT ANDROID AND NOT IOS) AND (UNIX) AND (system(pkg-config --exists libola)) AND (system(pkg-config --exists libolaserver)))))
+
+pkg_check_modules(LIBOLA IMPORTED_TARGET libola)
+pkg_check_modules(LIBOLASERVER IMPORTED_TARGET libolaserver)
+
+if((((NOT ANDROID AND NOT IOS) AND (UNIX) AND (${LIBOLA_FOUND}) AND (${LIBOLASERVER_FOUND}))))
     add_subdirectory(ola)
 endif()
 if(UNIX AND NOT ANDROID AND NOT IOS AND NOT MACOS)
