--- a/plugins/dummy/CMakeLists.txt
+++ b/plugins/dummy/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../variables.cmake)
+
 cmake_minimum_required(VERSION 3.16)
 project(dummy VERSION 1.0 LANGUAGES C CXX)
 
@@ -8,7 +10,6 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # qt_standard_project_setup()
 set(CMAKE_AUTOMOC ON)
 include(GNUInstallDirs)
-set(CMAKE_AUTOUIC ON)
 
 find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Widgets)
