--- a/plugins/enttecwing/test/CMakeLists.txt
+++ b/plugins/enttecwing/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../../variables.cmake)
+
 add_executable(enttecwing_test WIN32 MACOSX_BUNDLE
     main.cpp
     playbackwing_test.cpp playbackwing_test.h
