Added CMakeList.txt for dmxusb.

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(E1.31)
 add_subdirectory(loopback)
 add_subdirectory(osc)
 if(NOT ANDROID AND NOT IOS)
+    # add_subdirectory(dmxusb)
     add_subdirectory(peperoni)
     add_subdirectory(udmx)
     add_subdirectory(midi)
