--- a/plugins/dmx4linux/CMakeLists.txt
+++ b/plugins/dmx4linux/CMakeLists.txt
@@ -1,3 +1,5 @@
+include(../../variables.cmake)
+
 add_library(dmx4linux)
 target_sources(dmx4linux PRIVATE
     ../interfaces/qlcioplugin.cpp ../interfaces/qlcioplugin.h
