--- a/ui/test/vcframe/CMakeLists.txt
+++ b/ui/test/vcframe/CMakeLists.txt
@@ -1,9 +1,16 @@
 include(../../../variables.cmake)
 
-add_executable(vcframe_test WIN32 MACOSX_BUNDLE
-    vcframe_test.cpp vcframe_test.h
-    ../../src/virtualconsole/vcframe.h
-)
+if(MSVC)
+    add_executable(vcframe_test WIN32 MACOSX_BUNDLE
+        vcframe_test.cpp vcframe_test.h
+        ../../src/virtualconsole/vcframe.h
+    )
+else()
+    add_executable(vcframe_test WIN32 MACOSX_BUNDLE
+        vcframe_test.cpp vcframe_test.h
+    )
+endif()
+
 target_include_directories(vcframe_test PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
