--- a/ui/test/vcframeproperties/CMakeLists.txt
+++ b/ui/test/vcframeproperties/CMakeLists.txt
@@ -1,9 +1,16 @@
 include(../../../variables.cmake)
 
-add_executable(vcframeproperties_test WIN32 MACOSX_BUNDLE
-    vcframeproperties_test.cpp vcframeproperties_test.h
-    ../../src/virtualconsole/vcframeproperties.h
-)
+if(MSVC)
+    add_executable(vcframeproperties_test WIN32 MACOSX_BUNDLE
+        vcframeproperties_test.cpp vcframeproperties_test.h
+        ../../src/virtualconsole/vcframeproperties.h
+    )
+else()
+    add_executable(vcframeproperties_test WIN32 MACOSX_BUNDLE
+        vcframeproperties_test.cpp vcframeproperties_test.h
+    )
+endif()
+
 target_include_directories(vcframeproperties_test PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
