--- a/ui/test/vcproperties/CMakeLists.txt
+++ b/ui/test/vcproperties/CMakeLists.txt
@@ -1,9 +1,16 @@
 include(../../../variables.cmake)
 
-add_executable(vcproperties_test WIN32 MACOSX_BUNDLE
-    vcproperties_test.cpp vcproperties_test.h
-    ../../src/virtualconsole/vcproperties.h
-)
+if(MSVC)
+    add_executable(vcproperties_test WIN32 MACOSX_BUNDLE
+        vcproperties_test.cpp vcproperties_test.h
+        ../../src/virtualconsole/vcproperties.h
+    )
+else()
+    add_executable(vcproperties_test WIN32 MACOSX_BUNDLE
+        vcproperties_test.cpp vcproperties_test.h
+    )
+endif()
+
 target_include_directories(vcproperties_test PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
