--- a/ui/test/vcwidgetproperties/CMakeLists.txt
+++ b/ui/test/vcwidgetproperties/CMakeLists.txt
@@ -1,9 +1,16 @@
 include(../../../variables.cmake)
 
-add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
-    vcwidgetproperties_test.cpp vcwidgetproperties_test.h
-    ../../src/virtualconsole/vcwidgetproperties.h
-)
+if(MSVC)
+    add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
+        vcwidgetproperties_test.cpp vcwidgetproperties_test.h
+        ../../src/virtualconsole/vcwidgetproperties.h
+    )
+else()
+    add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
+        vcwidgetproperties_test.cpp vcwidgetproperties_test.h
+    )
+endif()
+
 target_include_directories(vcwidgetproperties_test PRIVATE
     ../../../plugins/interfaces
     ../../src
