Compiled QLC++5 with QML in Ubuntu.

--- a/hotplugmonitor/src/CMakeLists.txt
+++ b/hotplugmonitor/src/CMakeLists.txt
@@ -13,6 +13,9 @@ if(udev)
     target_sources(hotplugmonitor PRIVATE
         hpmprivate-udev.cpp hpmprivate-udev.h
     )
+    target_link_libraries(hotplugmonitor PRIVATE
+        udev
+    )
 endif()
 
 if(iokit)
