--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,10 @@ add_subdirectory(resources)
 add_subdirectory(plugins)
 add_subdirectory(platforms)
 if(qmlui)
+    message("Building QLC+ 5 QML UI")
     add_subdirectory(qmlui)
-endif()
-if(NOT qmlui)
+else()
+    message("Building QLC+ 4 QtWidget UI")
     add_subdirectory(ui)
     add_subdirectory(webaccess)
     add_subdirectory(main)
