--- a/ui/test/aboutbox/CMakeLists.txt
+++ b/ui/test/aboutbox/CMakeLists.txt
@@ -1,16 +1,20 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-add_executable(aboutbox_test WIN32 MACOSX_BUNDLE
-    aboutbox_test.cpp aboutbox_test.h
-    ../../src/aboutbox.h
+set(module_name "aboutbox_test")
+
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
 )
 
-target_include_directories(aboutbox_test PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
-    ../../src/
+    ../../src
 )
 
-target_link_libraries(aboutbox_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -20,18 +24,18 @@ target_link_libraries(aboutbox_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(aboutbox_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(aboutbox_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS aboutbox_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
