--- a/ui/test/addfixture/CMakeLists.txt
+++ b/ui/test/addfixture/CMakeLists.txt
@@ -1,24 +1,21 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-if(MSVC)
-    add_executable(addfixture_test WIN32 MACOSX_BUNDLE
-        ../../../engine/test/common/resource_paths.h
-        addfixture_test.cpp addfixture_test.h
-        ../../src/addfixture.h
-    )
-else()
-    add_executable(addfixture_test WIN32 MACOSX_BUNDLE
-        ../../../engine/test/common/resource_paths.h
-        addfixture_test.cpp addfixture_test.h
-    )
-endif()
+set(module_name "addfixture_test")
 
-target_include_directories(addfixture_test PRIVATE
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ../../../engine/test/common/resource_paths.h
+    ${module_name}.cpp ${module_name}.h
+)
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../src
 )
 
-target_link_libraries(addfixture_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -28,18 +25,18 @@ target_link_libraries(addfixture_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(addfixture_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(addfixture_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS addfixture_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
