--- a/ui/test/efxpreviewarea/CMakeLists.txt
+++ b/ui/test/efxpreviewarea/CMakeLists.txt
@@ -1,15 +1,18 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-add_executable(efxpreviewarea_test WIN32 MACOSX_BUNDLE
-    efxpreviewarea_test.cpp efxpreviewarea_test.h
-    ../../src/efxpreviewarea.h
+set(module_name "efxpreviewarea_test")
+
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
 )
-target_include_directories(efxpreviewarea_test PRIVATE
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../src
 )
 
-target_link_libraries(efxpreviewarea_test PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -18,19 +21,21 @@ target_link_libraries(efxpreviewarea_test PRIVATE
     qlcplusui
 )
 
+include_ui_header(${module_name})
+
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(efxpreviewarea_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(efxpreviewarea_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS efxpreviewarea_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
