--- a/ui/test/functionselection/CMakeLists.txt
+++ b/ui/test/functionselection/CMakeLists.txt
@@ -1,22 +1,20 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-if(MSVC)
-    add_executable(functionselection_test WIN32 MACOSX_BUNDLE
-        functionselection_test.cpp functionselection_test.h
-        ../../src/functionselection.h
-    )
-else()
-    add_executable(functionselection_test WIN32 MACOSX_BUNDLE
-        functionselection_test.cpp functionselection_test.h
-    )
-endif()
+set(module_name "functionselection_test")
 
-target_include_directories(functionselection_test PRIVATE
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
+)
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../src
 )
 
-target_link_libraries(functionselection_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -26,18 +24,18 @@ target_link_libraries(functionselection_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(functionselection_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(functionselection_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS functionselection_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
