--- a/ui/test/monitorfixture/CMakeLists.txt
+++ b/ui/test/monitorfixture/CMakeLists.txt
@@ -1,17 +1,21 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-add_executable(monitorfixture_test WIN32 MACOSX_BUNDLE
-    monitorfixture_test.cpp monitorfixture_test.h
-    ../../src/monitor/monitorfixture.h
+set(module_name "monitorfixture_test")
+
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
 )
-target_include_directories(monitorfixture_test PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
     ../../src
     ../../src/monitor
 )
 
-target_link_libraries(monitorfixture_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -21,18 +25,18 @@ target_link_libraries(monitorfixture_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(monitorfixture_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(monitorfixture_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS monitorfixture_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
