--- a/ui/test/palettegenerator/CMakeLists.txt
+++ b/ui/test/palettegenerator/CMakeLists.txt
@@ -1,17 +1,22 @@
 include(../../../variables.cmake)
 include(../../../coverage.cmake)
+include(../../src/include_ui.cmake)
 
-add_executable(palettegenerator_test WIN32
+set(module_name "palettegenerator_test")
+
+add_executable(${module_name} WIN32
     ../../../engine/test/common/resource_paths.h
-    palettegenerator_test.cpp palettegenerator_test.h
-    ../../src/palettegenerator.h
+    ${module_name}.cpp ${module_name}.h
 )
-target_include_directories(palettegenerator_test PRIVATE
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../src
 )
 
-target_link_libraries(palettegenerator_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -20,18 +25,18 @@ target_link_libraries(palettegenerator_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(palettegenerator_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(palettegenerator_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS palettegenerator_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
