--- a/ui/test/vccuelist/CMakeLists.txt
+++ b/ui/test/vccuelist/CMakeLists.txt
@@ -1,24 +1,22 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-if(MSVC)
-    add_executable(vccuelist_test WIN32 MACOSX_BUNDLE
-        vccuelist_test.cpp vccuelist_test.h
-        ../../src/virtualconsole/vccuelist.h
-    )
-else()
-    add_executable(vccuelist_test WIN32 MACOSX_BUNDLE
-        vccuelist_test.cpp vccuelist_test.h
-    )
-endif()
+set(module_name "vccuelist_test")
 
-target_include_directories(vccuelist_test PRIVATE
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
+)
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
     ../../src
     ../../src/virtualconsole
 )
 
-target_link_libraries(vccuelist_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -28,18 +26,18 @@ target_link_libraries(vccuelist_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(vccuelist_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(vccuelist_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS vccuelist_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
