--- a/ui/test/vcwidgetproperties/CMakeLists.txt
+++ b/ui/test/vcwidgetproperties/CMakeLists.txt
@@ -1,23 +1,21 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-if(MSVC)
-    add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
-        vcwidgetproperties_test.cpp vcwidgetproperties_test.h
-        ../../src/virtualconsole/vcwidgetproperties.h
-    )
-else()
-    add_executable(vcwidgetproperties_test WIN32 MACOSX_BUNDLE
-        vcwidgetproperties_test.cpp vcwidgetproperties_test.h
-    )
-endif()
+set(module_name "vcwidgetproperties_test")
 
-target_include_directories(vcwidgetproperties_test PRIVATE
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
+    ${module_name}.cpp ${module_name}.h
+)
+
+target_include_directories(${module_name} PRIVATE
     ../../../plugins/interfaces
     ../../src
     ../../src/virtualconsole
 )
 
-target_link_libraries(vcwidgetproperties_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -27,18 +25,18 @@ target_link_libraries(vcwidgetproperties_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(vcwidgetproperties_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(vcwidgetproperties_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS vcwidgetproperties_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
