--- a/ui/test/vcxypadfixtureeditor/CMakeLists.txt
+++ b/ui/test/vcxypadfixtureeditor/CMakeLists.txt
@@ -1,18 +1,23 @@
 include(../../../variables.cmake)
+include(../../src/include_ui.cmake)
 
-add_executable(vcxypadfixtureeditor_test WIN32 MACOSX_BUNDLE
+set(module_name "vcxypadfixtureeditor_test")
+
+add_executable(${module_name} WIN32 MACOSX_BUNDLE
     ../../../engine/test/common/resource_paths.h
-    vcxypadfixtureeditor_test.cpp vcxypadfixtureeditor_test.h
-    ../../src/virtualconsole/vcxypadfixtureeditor.h
+    ${module_name}.cpp ${module_name}.h
 )
-target_include_directories(vcxypadfixtureeditor_test PRIVATE
+
+target_include_directories(${module_name} PRIVATE
     ../../../engine/src
     ../../../plugins/interfaces
     ../../src
     ../../src/virtualconsole
 )
 
-target_link_libraries(vcxypadfixtureeditor_test PRIVATE
+include_ui_header(${module_name})
+
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
@@ -22,18 +27,18 @@ target_link_libraries(vcxypadfixtureeditor_test PRIVATE
 )
 
 if(qmlui OR (QT_VERSION_MAJOR GREATER 5))
-    target_link_libraries(vcxypadfixtureeditor_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Qml
     )
 endif()
 
 if(NOT (qmlui OR (QT_VERSION_MAJOR GREATER 5)))
-    target_link_libraries(vcxypadfixtureeditor_test PRIVATE
+    target_link_libraries(${module_name} PRIVATE
         Qt${QT_MAJOR_VERSION}::Script
     )
 endif()
 
-install(TARGETS vcxypadfixtureeditor_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
